@@ -1,3 +1,8 @@
+Sat Mar 10 01:33:15 CET 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/main,h, main/main.c: add --no-debsig option using f_nodebsign
+  * main/processarc: don't check signatures of f_nodebsign is set
+
 Fri Mar  9 21:23:03 CET 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * include/dpkg.h.in: add DEBSIGVERIFY
